src/objects/KB_Search_Result__c.object
<CustomObject>
    <fields>
        <fullName>ArticleViewdByUsers__c</fullName>
        <formula>HYPERLINK(&apos;/00OS0000000qepe?pv0=&apos; &amp; Article_ID__c , &apos;Article Viewed&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Article Viewd By Users</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Author__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Article Author</label>
        <referenceTo>User</referenceTo>
        <relationshipName>KB_Search_Result</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Article_ID__c</fullName>
        <label>Article ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Published_Date__c</fullName>
        <label>Article Published Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Article_Title__c</fullName>
        <label>Article Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Type__c</fullName>
        <label>Article Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Defect</fullName>
                </value>
                <value>
                    <fullName>FAQ</fullName>
                </value>
                <value>
                    <fullName>How To</fullName>
                </value>
                <value>
                    <fullName>Release Notes</fullName>
                </value>
                <value>
                    <fullName>Tech Advisory</fullName>
                </value>
                <value>
                    <fullName>Tech Tips</fullName>
                </value>
                <value>
                    <fullName>Ticket Solutions</fullName>
                </value>
                <value>
                    <fullName>User Manuals</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Article_Viewed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Article Viewed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Article__c</fullName>
        <formula>HYPERLINK(&apos;/&apos; &amp;  Article_ID__c ,  Article_Title__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Article</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_Group__c</fullName>
        <label>Product Group</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VisiNet</fullName>
                </value>
                <value>
                    <fullName>EMS</fullName>
                </value>
                <value>
                    <fullName>911-Inc</fullName>
                </value>
                <value>
                    <fullName>Perform</fullName>
                </value>
                <value>
                    <fullName>VisionAIR</fullName>
                </value>
                <value>
                    <fullName>IMC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KB_Search_Tracking__c</fullName>
        <label>KB Search Tracking</label>
        <referenceTo>KB_Search_Tracking__c</referenceTo>
        <relationshipLabel>KB Search Result</relationshipLabel>
        <relationshipName>KB_Search_Result</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>KB Search Result</label>
    <nameField>
        <displayFormat>KBSR-{0000}</displayFormat>
        <label>KB Search Result ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KB Search Result</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>